crates/cb-sema/tests/snapshots/lower_snapshots__array_new_index_store_load.snap
---
source: crates/cb-sema/tests/lower_snapshots.rs
expression: ir
---
fn @main() -> Void {
  locals:
    local0: a (Array<Int, 1>)
    local1: x (Int)

  bb0:
    r0 = const_int 10
    r1 = new_array Int, r0
    store_local local0, r1
    r2 = const_int 42
    r3 = const_int 3
    store_place local0[r3], r2
    r4 = load_local local0
    r5 = const_int 3
    r6 = get_element r4, r5
    store_local local1, r6
    return
}
