crates/cb-sema/tests/snapshots/lower_snapshots__array_of_structs_element_field.snap
---
source: crates/cb-sema/tests/lower_snapshots.rs
assertion_line: 394
expression: ir
---
fn @main() -> Void {
  locals:
    local0: arr (Array<StructVal(p), 1>)
    local1: r (Int)

  bb0:
    r0 = const_int 3
    r1 = new_array StructVal(p), r0
    store_local local0, r1
    r2 = const_int 42
    r3 = const_int 1
    store_place local0[r3].x, r2
    r4 = load_local local0
    r5 = const_int 1
    r6 = get_element r4, r5
    r7 = get_field r6, x (Int)
    store_local local1, r7
    return
}
