crates/cb-sema/tests/snapshots/lower_snapshots__for_loop.snap
---
source: crates/cb-sema/tests/lower_snapshots.rs
assertion_line: 60
expression: ir
---
fn @main() -> Void {
  locals:
    local0: i (Int)
    local1: @for_to_0 (Int)
    local2: @for_step_1 (Int)

  bb0:
    r0 = const_int 1
    store_local local0, r0
    r1 = const_int 10
    store_local local1, r1
    r2 = const_int 1
    store_local local2, r2
    goto bb3
  bb1:
    r6 = load_local local0
    r7 = load_local local1
    r8 = lt_eq r6, r7
    branch_if r8, bb4, bb6
  bb2:
    r9 = load_local local0
    r10 = load_local local1
    r11 = gt_eq r9, r10
    branch_if r11, bb4, bb6
  bb3:
    r3 = load_local local2
    r4 = const_int 0
    r5 = gt r3, r4
    branch_if r5, bb1, bb2
  bb4:
    goto bb5
  bb5:
    r12 = load_local local0
    r13 = load_local local2
    r14 = add r12, r13
    store_local local0, r14
    goto bb3
  bb6:
    return
}
