crates/cb-sema/tests/snapshots/lower_snapshots__for_loop_break_continue.snap
---
source: crates/cb-sema/tests/lower_snapshots.rs
expression: ir
---
fn @main() -> Void {
  locals:
    local0: i (Int)
    local1: @for_to_0 (Int)
    local2: @for_step_1 (Int)

  bb0:
    r0 = const_int 1
    store_local local0, r0
    r1 = const_int 10
    store_local local1, r1
    r2 = const_int 1
    store_local local2, r2
    goto bb3
  bb1:
    r6 = load_local local0
    r7 = load_local local1
    r8 = lt_eq r6, r7
    branch_if r8, bb4, bb6
  bb2:
    r9 = load_local local0
    r10 = load_local local1
    r11 = gt_eq r9, r10
    branch_if r11, bb4, bb6
  bb3:
    r3 = load_local local2
    r4 = const_int 0
    r5 = gt r3, r4
    branch_if r5, bb1, bb2
  bb4:
    r12 = load_local local0
    r13 = const_int 3
    r14 = eq r12, r13
    branch_if r14, bb8, bb7
  bb5:
    r18 = load_local local0
    r19 = load_local local2
    r20 = add r18, r19
    store_local local0, r20
    goto bb3
  bb6:
    return
  bb7:
    r15 = load_local local0
    r16 = const_int 5
    r17 = eq r15, r16
    branch_if r17, bb10, bb9
  bb8:
    goto bb5
  bb9:
    goto bb5
  bb10:
    goto bb6
}
